# streamantix

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  config.py  docker-compose.yml  docker-entrypoint.sh  download_model.py  main.py  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  initializeCommand.sh  onCreateCommand.sh
.github/agents/: architect.agent.md  devops.agent.md  moderator.agent.md  nlp-data.agent.md  reviewer.agent.md  security.agent.md  streamer.agent.md  tester.agent.md  ux-designer.agent.md  viewer.agent.md
.github/workflows/: ci.yml
auth/: __init__.py  twitch_auth.py
bot/: __init__.py  bot.py  cooldown.py
data/: interest_words_d.txt  interest_words_f.txt  interest_words_m.txt
game/: __init__.py  engine.py  state.py  word_utils.py
overlay/: __init__.py  server.py  state.py
overlay/static/: index.html
tests/: conftest.py  test_commands.py  test_cooldown.py  test_engine.py  test_game_state.py  test_overlay.py  test_twitch_auth.py  test_word_utils.py
tests/functional/: __init__.py  test_bot_overlay.py  test_game_flow.py
tests/unit/: test_commands.py  test_engine.py  test_game_state.py  test_overlay.py  test_twitch_auth.py
