[tool.poetry]
name = "streamantix"
version = "0.1.0"
description = "Twitch chat bot for a Cemantix-like semantic word guessing game"
authors = ["Solution Libre <contact@solution-libre.fr>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
twitchio = "^2.10"
gensim = "^4.3"
python-dotenv = "^1.0"
starlette = "^0.52"
uvicorn = "^0.41"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.28"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bot --cov=game --cov=overlay --cov-report=term-missing"

[tool.coverage.run]
source = ["bot", "game", "overlay"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
